// Vitest Snapshot v1

exports[`Grid > Grid badgeVue demo works fine 1`] = `
<div>
  <div
    class="t-grid"
  >
    
    <div
      class="t-grid-item"
      style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
    >
      <div
        class="t-grid-item__image-box"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
          >
            
          </div>
          
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 32px; height: 32px;"
          />
          
          
        </div>
      </div>
      <div
        class="t-grid-item__text"
        style="padding-left: 0px;"
      >
        <div
          class="t-grid-item__title"
          style="padding-top: 8px; margin-bottom: 4px;"
        >
          标题文字
        </div>
        <div
          class="t-grid-item__description"
        >
          <!---->
        </div>
      </div>
    </div>
    <div
      class="t-grid-item"
      style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
    >
      <div
        class="t-grid-item__image-box"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
          >
            3
          </div>
          
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 32px; height: 32px;"
          />
          
          
        </div>
      </div>
      <div
        class="t-grid-item__text"
        style="padding-left: 0px;"
      >
        <div
          class="t-grid-item__title"
          style="padding-top: 8px; margin-bottom: 4px;"
        >
          标题文字
        </div>
        <div
          class="t-grid-item__description"
        >
          <!---->
        </div>
      </div>
    </div>
    <div
      class="t-grid-item"
      style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
    >
      <div
        class="t-grid-item__image-box"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
          >
            NEW
          </div>
          
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 32px; height: 32px;"
          />
          
          
        </div>
      </div>
      <div
        class="t-grid-item__text"
        style="padding-left: 0px;"
      >
        <div
          class="t-grid-item__title"
          style="padding-top: 8px; margin-bottom: 4px;"
        >
          标题五字内
        </div>
        <div
          class="t-grid-item__description"
        >
          <!---->
        </div>
      </div>
    </div>
    <div
      class="t-grid-item"
      style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
    >
      <div
        class="t-grid-item__image-box"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
          >
            ...
          </div>
          
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 32px; height: 32px;"
          />
          
          
        </div>
      </div>
      <div
        class="t-grid-item__text"
        style="padding-left: 0px;"
      >
        <div
          class="t-grid-item__title"
          style="padding-top: 8px; margin-bottom: 4px;"
        >
          标题五字内
        </div>
        <div
          class="t-grid-item__description"
        >
          <!---->
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Grid > Grid baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="grid-demo"
    data-v-3e578ca0=""
  >
    <div
      class="t-grid"
      data-v-3e578ca0=""
    >
      
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 32px; height: 32px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            标题文字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 32px; height: 32px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            标题文字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 32px; height: 32px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            标题文字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 32px; height: 32px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            最多四字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="grid-demo"
    data-v-3e578ca0=""
  >
    <div
      class="t-grid"
      data-v-3e578ca0=""
    >
      
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 28px; height: 28px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            标题文字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 28px; height: 28px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            标题文字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 28px; height: 28px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            标题文字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 28px; height: 28px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            标题文字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 28px; height: 28px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            最多四字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="grid-demo"
    data-v-3e578ca0=""
  >
    <div
      class="t-grid"
      data-v-3e578ca0=""
    >
      
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 33.333333333333336%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 48px; height: 48px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            标题文字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 33.333333333333336%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 48px; height: 48px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            标题文字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 33.333333333333336%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 48px; height: 48px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            标题最多六字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="grid-demo short-width"
    data-v-3e578ca0=""
  >
    <div
      class="t-grid"
      data-v-3e578ca0=""
    >
      
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 28px; height: 28px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            标题文字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 28px; height: 28px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            标题文字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 28px; height: 28px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            标题文字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 28px; height: 28px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            标题文字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-grid-item"
        data-v-3e578ca0=""
        style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
      >
        <div
          class="t-grid-item__image-box"
        >
          
          <img
            class="t-grid-item__image"
            src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
            style="width: 28px; height: 28px;"
          />
          
        </div>
        <div
          class="t-grid-item__text"
          style="padding-left: 0px;"
        >
          <div
            class="t-grid-item__title"
            style="padding-top: 8px; margin-bottom: 4px;"
          >
            标题文字
          </div>
          <div
            class="t-grid-item__description"
          >
            <!---->
          </div>
        </div>
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`Grid > Grid descVue demo works fine 1`] = `
<div>
  <div
    class="t-grid"
  >
    
    <div
      class="t-grid-item"
      style="flex-basis: 33.333333333333336%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
    >
      <div
        class="t-grid-item__image-box"
      >
        
        <img
          class="t-grid-item__image"
          src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
          style="width: 48px; height: 48px;"
        />
        
      </div>
      <div
        class="t-grid-item__text"
        style="padding-left: 0px;"
      >
        <div
          class="t-grid-item__title"
          style="padding-top: 8px; margin-bottom: 4px;"
        >
          标题文字
        </div>
        <div
          class="t-grid-item__description"
        >
          说明文字
        </div>
      </div>
    </div>
    <div
      class="t-grid-item"
      style="flex-basis: 33.333333333333336%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
    >
      <div
        class="t-grid-item__image-box"
      >
        
        <img
          class="t-grid-item__image"
          src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
          style="width: 48px; height: 48px;"
        />
        
      </div>
      <div
        class="t-grid-item__text"
        style="padding-left: 0px;"
      >
        <div
          class="t-grid-item__title"
          style="padding-top: 8px; margin-bottom: 4px;"
        >
          标题文字
        </div>
        <div
          class="t-grid-item__description"
        >
          说明文字
        </div>
      </div>
    </div>
    <div
      class="t-grid-item"
      style="flex-basis: 33.333333333333336%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
    >
      <div
        class="t-grid-item__image-box"
      >
        
        <img
          class="t-grid-item__image"
          src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
          style="width: 48px; height: 48px;"
        />
        
      </div>
      <div
        class="t-grid-item__text"
        style="padding-left: 0px;"
      >
        <div
          class="t-grid-item__title"
          style="padding-top: 8px; margin-bottom: 4px;"
        >
          标题最多六字
        </div>
        <div
          class="t-grid-item__description"
        >
          说明最多六字
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Grid > Grid mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-2417457e=""
>
  <h1
    class="title"
    data-v-2417457e=""
  >
    Grid 宫格
  </h1>
  <p
    class="summary"
    data-v-2417457e=""
  >
    用于功能入口布局，将页面或特定区域切分成若干等大的区块，形成若干功能入口。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-2417457e=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 基础宫格
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
       
    </p>
    
    <div
      class="grid-demo"
      data-v-2417457e=""
    >
      <div
        class="t-grid"
        data-v-2417457e=""
      >
        
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 32px; height: 32px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 32px; height: 32px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 32px; height: 32px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 32px; height: 32px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题五字内
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="grid-demo"
      data-v-2417457e=""
    >
      <div
        class="t-grid"
        data-v-2417457e=""
      >
        
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 28px; height: 28px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 28px; height: 28px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 28px; height: 28px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 28px; height: 28px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 28px; height: 28px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              最多四字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="grid-demo"
      data-v-2417457e=""
    >
      <div
        class="t-grid"
        data-v-2417457e=""
      >
        
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 33.333333333333336%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 48px; height: 48px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 33.333333333333336%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 48px; height: 48px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 33.333333333333336%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 48px; height: 48px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题最多六字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="grid-demo short-width"
      data-v-2417457e=""
    >
      <div
        class="t-grid"
        data-v-2417457e=""
      >
        
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 28px; height: 28px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 28px; height: 28px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 28px; height: 28px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 28px; height: 28px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 20%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 28px; height: 28px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-2417457e=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      02 带说明宫格
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
       
    </p>
    
    <div
      class="grid-demo"
      data-v-2417457e=""
    >
      <div
        class="t-grid"
        data-v-2417457e=""
      >
        
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 33.333333333333336%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 48px; height: 48px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              说明文字
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 33.333333333333336%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 48px; height: 48px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              说明文字
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 33.333333333333336%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 48px; height: 48px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题最多六字
            </div>
            <div
              class="t-grid-item__description"
            >
              说明最多六字
            </div>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="grid-demo"
      data-v-2417457e=""
    >
      <div
        class="t-grid"
        data-v-2417457e=""
      >
        
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 50%; flex-direction: row; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 48px; height: 48px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 12px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 0px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              说明文字
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 50%; flex-direction: row; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            
            <img
              class="t-grid-item__image"
              src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
              style="width: 48px; height: 48px;"
            />
            
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 12px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 0px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              说明文字
            </div>
          </div>
        </div>
        
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-2417457e=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      03 带徽标宫格
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
       
    </p>
    
    <div
      class="grid-demo"
      data-v-2417457e=""
    >
      <div
        class="t-grid"
        data-v-2417457e=""
      >
        
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
              >
                
              </div>
              
              
              <img
                class="t-grid-item__image"
                src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
                style="width: 32px; height: 32px;"
              />
              
              
            </div>
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
              >
                3
              </div>
              
              
              <img
                class="t-grid-item__image"
                src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
                style="width: 32px; height: 32px;"
              />
              
              
            </div>
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题文字
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
              >
                NEW
              </div>
              
              
              <img
                class="t-grid-item__image"
                src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
                style="width: 32px; height: 32px;"
              />
              
              
            </div>
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题五字内
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="t-grid-item"
          data-v-2417457e=""
          style="flex-basis: 25%; flex-direction: column; padding-left: 0px; padding-right: 0px; align-items: center; justify-content: center; text-align: center;"
        >
          <div
            class="t-grid-item__image-box"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
              >
                ···
              </div>
              
              
              <img
                class="t-grid-item__image"
                src="https://tdesign.gtimg.com/mobile/%E5%9B%BE%E7%89%87.png"
                style="width: 32px; height: 32px;"
              />
              
              
            </div>
          </div>
          <div
            class="t-grid-item__text"
            style="padding-left: 0px;"
          >
            <div
              class="t-grid-item__title"
              style="padding-top: 8px; margin-bottom: 4px;"
            >
              标题五字内
            </div>
            <div
              class="t-grid-item__description"
            >
              <!---->
            </div>
          </div>
        </div>
        
      </div>
    </div>
    
  </div>
</div>
`;
